setup/salesforce/force-app/main/default/objects/Opportunity/fields/Contract_Model__c.field-meta.xml
<CustomField>
  <fullName>Contract_Model__c</fullName>
  <description>Commercial contract style for this opportunity.</description>
  <label>Contract Model</label>
  <type>Picklist</type>
  <valueSet>
    <valueSetDefinition>
      <value><fullName>Subscription</fullName><default>false</default></value>
      <value><fullName>Project-based</fullName><default>false</default></value>
      <value><fullName>Time &amp; Materials</fullName><default>false</default></value>
      <value><fullName>Retainer</fullName><default>false</default></value>
    </valueSetDefinition>
  </valueSet>
</CustomField>