setup/salesforce/force-app/main/default/objects/Opportunity/fields/Cross_Sell_From__c.field-meta.xml
<CustomField>
  <fullName>Cross_Sell_From__c</fullName>
  <description>Indicates previous engagement used for cross-sell.</description>
  <label>Cross Sell From</label>
  <type>Picklist</type>
  <valueSet>
    <valueSetDefinition>
      <value><fullName>None</fullName><default>false</default></value>
      <value><fullName>SaaS</fullName><default>false</default></value>
      <value><fullName>Services</fullName><default>false</default></value>
      <value><fullName>Hybrid</fullName><default>false</default></value>
    </valueSetDefinition>
  </valueSet>
</CustomField>