setup/salesforce/force-app/main/default/objects/Opportunity/fields/Data_Volume_Tier__c.field-meta.xml
<CustomField>
  <fullName>Data_Volume_Tier__c</fullName>
  <description>Expected data footprint tier for pricing and delivery planning.</description>
  <label>Data Volume Tier</label>
  <type>Picklist</type>
  <valueSet>
    <valueSetDefinition>
      <value><fullName>Low</fullName><default>false</default></value>
      <value><fullName>Medium</fullName><default>false</default></value>
      <value><fullName>High</fullName><default>false</default></value>
      <value><fullName>Very High</fullName><default>false</default></value>
    </valueSetDefinition>
  </valueSet>
</CustomField>