setup/salesforce/force-app/main/default/objects/Opportunity/fields/Expected_ARR__c.field-meta.xml
<CustomField>
  <fullName>Expected_ARR__c</fullName>
  <description>Expected annual recurring revenue if won.</description>
  <label>Expected ARR</label>
  <precision>16</precision>
  <scale>2</scale>
  <type>Currency</type>
</CustomField>