setup/salesforce/force-app/main/default/objects/Opportunity/fields/Implementation_Months__c.field-meta.xml
<CustomField>
  <fullName>Implementation_Months__c</fullName>
  <description>Estimated implementation duration in months.</description>
  <label>Implementation Months</label>
  <precision>3</precision>
  <scale>0</scale>
  <type>Number</type>
</CustomField>