setup/salesforce/force-app/main/default/objects/Opportunity/fields/Offering_Type__c.field-meta.xml
<CustomField>
  <fullName>Offering_Type__c</fullName>
  <description>Commercial motion type for the opportunity.</description>
  <label>Offering Type</label>
  <type>Picklist</type>
  <valueSet>
    <valueSetDefinition>
      <value><fullName>SaaS New Logo</fullName><default>false</default></value>
      <value><fullName>Services New Logo</fullName><default>false</default></value>
      <value><fullName>Cross-sell SaaS</fullName><default>false</default></value>
      <value><fullName>Cross-sell Services</fullName><default>false</default></value>
      <value><fullName>Hybrid Expansion</fullName><default>false</default></value>
    </valueSetDefinition>
  </valueSet>
</CustomField>