setup/salesforce/force-app/main/default/objects/Opportunity/fields/Sales_Motion__c.field-meta.xml
<CustomField>
  <fullName>Sales_Motion__c</fullName>
  <description>How this opportunity entered the pipeline.</description>
  <label>Sales Motion</label>
  <type>Picklist</type>
  <valueSet>
    <valueSetDefinition>
      <value><fullName>Outbound</fullName><default>false</default></value>
      <value><fullName>Inbound</fullName><default>false</default></value>
      <value><fullName>Partner-led</fullName><default>false</default></value>
      <value><fullName>Expansion</fullName><default>false</default></value>
    </valueSetDefinition>
  </valueSet>
</CustomField>