setup/salesforce/force-app/main/default/objects/Opportunity/fields/Usage_Pricing_Model__c.field-meta.xml
<CustomField>
  <fullName>Usage_Pricing_Model__c</fullName>
  <description>Usage metric used for pricing expansion.</description>
  <label>Usage Pricing Model</label>
  <type>Picklist</type>
  <valueSet>
    <valueSetDefinition>
      <value><fullName>None</fullName><default>false</default></value>
      <value><fullName>Data Volume</fullName><default>false</default></value>
      <value><fullName>Pipeline Count</fullName><default>false</default></value>
      <value><fullName>Metadata Scale</fullName><default>false</default></value>
      <value><fullName>Hybrid Usage</fullName><default>false</default></value>
    </valueSetDefinition>
  </valueSet>
</CustomField>